--- a/cn-a.css
+++ b/cn-a.css
@@ -42,3 +42,13 @@
     background-color: #2196F3;
 }
 /* navigation End */
+
+
+.navi_pills>li {
+    float: left;
+    border: 1px solid #fff;
+}
+#simple #storeDescriptionTab .navi_pills>li {
+    width: 150px;
+    text-align: center;
+}
