--- a/cn-a.css
+++ b/cn-a.css
@@ -48,7 +48,11 @@
 #simple #storeDescriptionTab .navi_pills>li {
     width: 150px;
     text-align: center;
-    border: 1px solid #fff;
+    border:none;
 }
 
+.navi_pills>li+li {
+    border-left: none;
+    border-right: 1px solid #fff!important;
+}
 
