--- a/cn-a.css
+++ b/cn-a.css
@@ -10,11 +10,7 @@
 #simple .module_tit {background:#2196F3;}
 #simple #storeDescriptionTab .navi_pills {background-color:#2196F3;}
 
-@media (max-width: 767px)
-#simple #storeDescriptionTab .navi_pills+.tab_content>.tab_pane_wrapper>.navi_accordion_title>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(1):checked~.navi_pills>li:nth-of-type(1)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(2):checked~.navi_pills>li:nth-of-type(2)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(3):checked~.navi_pills>li:nth-of-type(3)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(4):checked~.navi_pills>li:nth-of-type(4)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(5):checked~.navi_pills>li:nth-of-type(5)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(6):checked~.navi_pills>li:nth-of-type(6)>label {
-    color: #fff;
-    background-color: #2196F3;
-}
+@media (max-width:767px)#simple #storeDescriptionTab .navi_pills+.tab_content>.tab_pane_wrapper>.navi_accordion_title>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(1):checked~.navi_pills>li:nth-of-type(1)>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(2):checked~.navi_pills>li:nth-of-type(2)>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(3):checked~.navi_pills>li:nth-of-type(3)>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(4):checked~.navi_pills>li:nth-of-type(4)>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(5):checked~.navi_pills>li:nth-of-type(5)>label,#simple #storeDescriptionTab .widget_tab_radio:nth-of-type(6):checked~.navi_pills>li:nth-of-type(6)>label {color:#fff;background-color:#2196F3;}
 
 /* navigation End*/
 
