--- a/cn-a.css
+++ b/cn-a.css
@@ -9,3 +9,11 @@
 
 #simple #storeDescriptionTab .navi_pills>li {width:150px;text-align:center;border:none;}
 .navi_pills>li+li {border-left:none;border-right:1px solid #fff!important;}
+
+#simple .body_content {
+	background-color:#cde4f2;
+	background-image:url(https://timage.pushauction.com/v3/DefaultTemplate/A15314/store_topbg.jpg);
+	background-position-y:top;
+	background-position-x:center;
+	background-repeat:no-repeat;
+}
