--- a/cn-a.css
+++ b/cn-a.css
@@ -12,7 +12,7 @@
 
 #simple .body_content {
 	background-color:#cde4f2;
-	background-image:url(https://timage.pushauction.com/v3/DefaultTemplate/A15314/store_topbg.jpg);
+	background-image:url(http://wxalbum-10001658.image.myqcloud.com/wxalbum/229292/20200316221046/dfab11d0c7deec28cd4c83e4fd91a75f.jpg);
 	background-position-y:top;
 	background-position-x:center;
 	background-repeat:no-repeat;
