--- a/cn-a.css
+++ b/cn-a.css
@@ -13,3 +13,5 @@
 #simple .body_content {background-color:#cde4f2;background-image:url(https://varcoh.github.io/sucoh/store_topbg2.jpg);background-position-y:top;background-position-x:center;background-repeat:no-repeat;}
 #simple .grid {width:1100px;padding:100px 10px 0px 10px;box-sizing:border-box;}
 .page_out {padding:0;}
+
+#banner {width:100%;text-align:left;background-image:url(https://varcoh.github.io/sucoh/1080x300.jpg);height:300px;}
