--- a/css/us-2.css
+++ b/css/us-2.css
@@ -74,3 +74,18 @@
 .page_out {
     padding: 0;
 }
+
+#simple .module_tit {
+    font-weight: 600;
+    padding: 0;
+    overflow: hidden;
+    background: #7dabbb;
+}
+
+#simple #storeDescriptionTab .navi_pills {
+    background-color: #7dabbb;
+}
+#simple #storeDescriptionTab .navi_pills+.tab_content>.tab_pane_wrapper>.navi_accordion_title>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(1):checked~.navi_pills>li:nth-of-type(1)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(2):checked~.navi_pills>li:nth-of-type(2)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(3):checked~.navi_pills>li:nth-of-type(3)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(4):checked~.navi_pills>li:nth-of-type(4)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(5):checked~.navi_pills>li:nth-of-type(5)>label, #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(6):checked~.navi_pills>li:nth-of-type(6)>label {
+    color: #FFF;
+    background-color: #326273;
+}
