--- a/css/us-2.css
+++ b/css/us-2.css
@@ -44,33 +44,35 @@
 }
 
 
-#simple .grid {
-    width: 1100px;
-    padding: 100px 10px 0px 10px;
-    box-sizing: border-box;
-}
 
 .page_out {
     padding: 0;
 }
+
+
 .footer_content {
     background-color: #eee;
-    height: 50px;
-    min-height: 199px;
+    height: 0px;
+    min-height: 0px;
     max-height: 50px;
 }
+
+#simple .grid {
+    width: 1100px;
+    padding: 100px 10px 400px 10px;
+    box-sizing: border-box;
+}
+
 
 /* 20200317*/
 #simple .footer_content {
     background-color: #ccdfe6;
 }
 
-#simple-o .body_content {
-    background-color: #ccdfe6;
-    background: url(https://varcoh.github.io/sucoh/image/us-2-background-top.jpg)top center no-repeat,url(https://varcoh.github.io/sucoh/image/us-2-background-bottom.jpg)center bottom no-repeat;
+#simple .body_content {
+    background-color: #ccdfe6!important;
+    background: url(https://varcoh.github.io/sucoh/image/us-2-background-top.jpg) top center no-repeat, url(https://varcoh.github.io/sucoh/image/us-2-background-bottom.png) bottom center no-repeat;
 }
-
-
 
 #simple .module_tit {
     font-weight: 600;
