--- a/css/us-5.css
+++ b/css/us-5.css
@@ -65,11 +65,11 @@
 
 /* 20200317*/
 #simple .footer_content {
-    background-color: #EEEEEE;
+    background-color: #e9e9e9;
 }
 
 #simple .body_content {
-    background-color: #000000!important;
+    background-color: #e9e9e9!important;
     background: url(https://varcoh.github.io/sucoh/image/us-5-background-top.jpg) top center no-repeat;
 }
 
