--- a/css/us-5.css
+++ b/css/us-5.css
@@ -70,7 +70,7 @@
 
 #simple .body_content {
     background-color: #e9e9e9!important;
-    background: url(https://varcoh.github.io/sucoh/image/us-5-background-top.jpg) top center no-repeat;
+    background: url(https://varcoh.github.io/sucoh/image/us-5-background-top.jpg) top center no-repeat,url(https://varcoh.github.io/sucoh/image/us-5-background-center.jpg) center center;
 }
 
 
