--- a/css/us-5.css
+++ b/css/us-5.css
@@ -74,12 +74,21 @@
 }
 
 
-
+#simple .module_tit span {
+    padding-left: 10px;
+    height: 40px;
+    line-height: 40px;
+    color: #000;
+}
+#simple #storeDescriptionTab .navi_pills>li>label {
+    color: #000;
+}
 #simple .module_tit {
     background: #fffc01;
     font-weight: 600;
     padding: 0;
     overflow: hidden;
+    background-image: url(https://varcoh.github.io/sucoh/image/module_title.jpg);
 }
 
 #simple-m .module_tit {
@@ -101,5 +110,13 @@
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(5):checked~.navi_pills>li:nth-of-type(5)>label,
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(6):checked~.navi_pills>li:nth-of-type(6)>label {
     color: #FFF;
-    background-color: #ffd200;
+    background-color: #000;
+}
+
+.footer_content {
+    background-color: #eee;
+    height: 211px;
+    min-height: 211px;
+    background: url(https://varcoh.github.io/sucoh/image/us-5-background-bottom.png) center bottom;
+    max-height: 50px;
 }
