--- a/css/us-4.css
+++ b/css/us-4.css
@@ -73,7 +73,9 @@
     background: url(https://varcoh.github.io/sucoh/image/us-4-background-top.jpg) center;
 }
 
-
+#simple #storeDescriptionTab .navi_pills>li>label {
+    color: #000;
+}
 #simple .module_tit {
     background: #fe761e;
     font-weight: 600;
