--- a/css/us-5.css
+++ b/css/us-5.css
@@ -101,6 +101,10 @@
     background-image: url(https://varcoh.github.io/sucoh/image/module_title.jpg);
 }
 
+#simple #storeDescriptionTab .navi_pills>li>label {
+    color: #000;
+}
+
 #simple #storeDescriptionTab .navi_pills+.tab_content>.tab_pane_wrapper>.navi_accordion_title>label,
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(1):checked~.navi_pills>li:nth-of-type(1)>label,
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(2):checked~.navi_pills>li:nth-of-type(2)>label,
