--- a/css/us-6.css
+++ b/css/us-6.css
@@ -78,14 +78,14 @@
     color: #000;
 }
 #simple .module_tit {
-    background: ##9C27B0;
+    background: #9C27B0;
     font-weight: 600;
     padding: 0;
     overflow: hidden;
 }
 
 #simple-m .module_tit {
-    background: ##9C27B0;
+    background: #9C27B0;
     font-weight: 600;
     padding: 0;
     overflow: hidden;
