--- a/css/us-6.css
+++ b/css/us-6.css
@@ -103,5 +103,5 @@
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(5):checked~.navi_pills>li:nth-of-type(5)>label,
 #simple #storeDescriptionTab .widget_tab_radio:nth-of-type(6):checked~.navi_pills>li:nth-of-type(6)>label {
     color: #FFF;
-    background-color: #317bbf;
+    background-color: #1961a2;
 }
