--- a/css/us-1.css
+++ b/css/us-1.css
@@ -96,14 +96,12 @@
 }
 
 .faq-a {
-    font-size: 16px;
-    text-align: center;;
-    line-height: 25px;
-    margin-bottom: 20px;
+    text-align: center;
+    font-size: 20px!important;
+    font-weight: bold;
 }
 
 .faq-b {
-    font-size: 16px;
-    line-height: 25px;
-    margin-bottom: 20px;
+    font-weight: bold;
+    margin-top: 35px;
 }
