--- a/css/us-2.css
+++ b/css/us-2.css
@@ -95,3 +95,19 @@
     color: #FFF;
     background-color: #326273;
 }
+.vfaq p {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+
+.faq-a {
+    text-align: center;
+    font-size: 20px!important;
+    font-weight: bold;
+}
+
+.faq-b {
+    font-weight: bold;
+    margin-top: 35px;
+}
