--- a/css/us-3.css
+++ b/css/us-3.css
@@ -104,3 +104,20 @@
 #simple #storeDescriptionTab .navi_pills>li>label {
     color: #000;
 }
+
+.vfaq p {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+
+.faq-a {
+    text-align: center;
+    font-size: 20px!important;
+    font-weight: bold;
+}
+
+.faq-b {
+    font-weight: bold;
+    margin-top: 35px;
+}
