--- a/css/us-4.css
+++ b/css/us-4.css
@@ -104,3 +104,21 @@
     color: #FFF;
     background-color: #e84512;
 }
+
+
+.vfaq p {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+
+.faq-a {
+    text-align: center;
+    font-size: 20px!important;
+    font-weight: bold;
+}
+
+.faq-b {
+    font-weight: bold;
+    margin-top: 35px;
+}
