--- a/css/us-7.css
+++ b/css/us-7.css
@@ -69,16 +69,14 @@
 }
 
 #simple .module_tit {
-    background: #2196F3;
+    background: #00a559;
     font-weight: 600;
     padding: 0;
     overflow: hidden;
-    background-image: url(https://varcoh.github.io/sucoh/image/us-1-title.jpg);
 }
 
 #simple #storeDescriptionTab .navi_pills {
-    background-color: #2196F3;
-    background-image: url(https://varcoh.github.io/sucoh/image/us-1-title.jpg);
+    background-color: #00a559;
 }
 
 
