--- a/css/au-4.css
+++ b/css/au-4.css
@@ -80,7 +80,7 @@
 }
 
 #simple #storeDescriptionTab .navi_pills>li>label {
-    color: #000;
+    color: #fff;
 }
 #simple .module_tit {
     background: #fe761e;
